--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vant": "^2.12.47",
@@ -32,6 +33,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "postcss": "^8.4.14",
+    "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
